--- a/Internship/landingpage.html
+++ b/Internship/landingpage.html
@@ -53,11 +53,9 @@
       <div class="main_right">
         <div class="main_right_text">
           <b>
-            <li>Стажировка в любой точке мира</li>
-            <li>Для преподавателей любой сферы</li>
-            <li>
-              Регистрируйся на сайте, подавай заявку и с тобой свяжутся
-            </li></b
+            <li>ЧТО</li>
+            <li>КОМУ</li>
+            <li>ЗАЧЕМ</li></b
           >
         </div>
       </div>
