--- a/Internship/landingpage.html
+++ b/Internship/landingpage.html
@@ -20,7 +20,7 @@
       <span class="top_element">Контакты</span>
       <span class="top_button_left">TEXT</span>
       <span class="top_button_right">
-        <a href="/landingpage.html#reg">Регистрация</a>
+        <a href="./landingpage.html#reg">Регистрация</a>
       </span>
     </header>
     <div class="occupation">
@@ -31,7 +31,7 @@
           среди преподавательского состава лучших университетов нашей страны!
         </h2>
 
-        <a href="/landingpage.html#reg">
+        <a href="./landingpage.html#reg">
           <h2 class="occupation_content_button">Быстрая Регистрация!</h2></a
         >
       </div>
@@ -181,11 +181,11 @@
           name=""
           id="user_email"
         />
-        
-          <input
-            type="submit"
-            class="registration_button"
-            value="Отправить заявку!"
+
+        <input
+          type="submit"
+          class="registration_button"
+          value="Отправить заявку!"
         />
       </form>
     </div>
