add register request on email and refactor index.html

--- a/Internship/landingpage.html
+++ b/Internship/landingpage.html
@@ -144,41 +144,41 @@
       </div>
     </div>
     <div class="registration" id="reg">
-      <form class="registarion_form">
+      <form class="registarion_form" action="./scripts/send.php" method="post">
         <h4><b> Регистрация на участие в программе онлайн-стажировки</b></h4>
         <input
           type="text"
           class="registarion_form_name"
           placeholder="Имя"
-          name=""
+          name="name"
           id="user_name"
         />
         <input
           type="text"
           class="registarion_form_surname"
           placeholder="Фамилия"
-          name=""
+          name="surname"
           id="user_surname"
         />
         <input
           type="text"
           class="registarion_form_text"
           placeholder="Должность"
-          name=""
+          name="job_position"
           id="user_position"
         />
         <input
           type="text"
           class="registarion_form_text"
           placeholder="Телефон"
-          name=""
+          name="phone"
           id="user_telephone"
         />
         <input
           type="email"
           class="registarion_form_text"
           placeholder="Электронный адрес"
-          name=""
+          name="email"
           id="user_email"
         />
         
