--- a/Internship/landingpage.html
+++ b/Internship/landingpage.html
@@ -152,6 +152,7 @@
           placeholder="Имя"
           name="name"
           id="user_name"
+          required
         />
         <input
           type="text"
@@ -159,6 +160,7 @@
           placeholder="Фамилия"
           name="surname"
           id="user_surname"
+          required
         />
         <input
           type="text"
@@ -166,6 +168,7 @@
           placeholder="Должность"
           name="job_position"
           id="user_position"
+          required
         />
         <input
           type="text"
@@ -173,6 +176,7 @@
           placeholder="Телефон"
           name="phone"
           id="user_telephone"
+          required
         />
         <input
           type="email"
@@ -180,6 +184,7 @@
           placeholder="Электронный адрес"
           name="email"
           id="user_email"
+          required
         />
 
         <input
