--- a/Internship/landingpage.html
+++ b/Internship/landingpage.html
@@ -142,49 +142,112 @@
           Трудоустройство по окончанию стажировки
         </div>
       </div>
+
+      <div class="facts_review">
+        <img
+          src="./images/professor.jpg"
+          class="facts_review_image"
+          width="215px"
+          height="300px"
+          alt="professor"
+        />
+        <!-- <div class="facts_review_button_1">
+          <img src="./images/arrow1.png" alt="arrow" width="50px" />
+        </div>
+        <div class="facts_review_button_2">
+          <img src="./images/arrow2.png" alt="arrow" width="50px" />
+        </div> -->
+        <div class="facts_review_area">
+          <b> <span class="facts_review_area_text">Петров А. В.</span></b>
+          <b>
+            <span class="facts_review_area_text" style="color: #b9b9b9"
+              >Зав. кафедры</span
+            ></b
+          >
+          <span class="facts_review_area_text" style="font-size: 26px">
+            Прошел стажировку по обращению с компьютерами, что значительно
+            повысило продуктивность моей работы. Всем рекомендую, регистрация не
+            сложная, большой выбор стажировок на любой вкус.
+          </span>
+        </div>
+      </div>
+      <div class="facts_review_2">
+        <img
+          src="./images/professor2jpg.jpg"
+          class="facts_review_image"
+          width="215px"
+          height="300px"
+          alt="professor"
+        />
+        <!-- <div class="facts_review_button_1">
+          <img src="./images/arrow1.png" alt="arrow" width="50px" />
+        </div>
+        <div class="facts_review_button_2">
+          <img src="./images/arrow2.png" alt="arrow" width="50px" />
+        </div> -->
+        <div class="facts_review_area">
+          <b> <span class="facts_review_area_text">Антонович Л. Ф.</span></b>
+          <b>
+            <span class="facts_review_area_text" style="color: #b9b9b9"
+              >Преподаватель</span
+            ></b
+          >
+          <span class="facts_review_area_text" style="font-size: 26px">
+            Прошел стажировку по европейскому праву в одном из лучших
+            университетов Польши, после чего преподаю не только правоведение
+            законов Украины, но и европейское право. Отличная стажировка, всем
+            советую.
+          </span>
+        </div>
+      </div>
+      <div class="facts_text">
+        <b
+          ><span class="facts_review_area_text" style="font-size: 58px">
+            Что говорят?</span
+          ></b
+        >
+        <span class="facts_review_area_text" style="font-size: 36px">
+          Отзывы преподавателей, которые закончили стажировку</span
+        >
+      </div>
     </div>
     <div class="registration" id="reg">
-      <form class="registarion_form" action="./scripts/send.php" method="post">
+      <form class="registarion_form">
         <h4><b> Регистрация на участие в программе онлайн-стажировки</b></h4>
         <input
           type="text"
           class="registarion_form_name"
           placeholder="Имя"
-          name="name"
+          name=""
           id="user_name"
-          required
         />
         <input
           type="text"
           class="registarion_form_surname"
           placeholder="Фамилия"
-          name="surname"
+          name=""
           id="user_surname"
-          required
         />
         <input
           type="text"
           class="registarion_form_text"
           placeholder="Должность"
-          name="job_position"
+          name=""
           id="user_position"
-          required
         />
         <input
           type="text"
           class="registarion_form_text"
           placeholder="Телефон"
-          name="phone"
+          name=""
           id="user_telephone"
-          required
         />
         <input
           type="email"
           class="registarion_form_text"
           placeholder="Электронный адрес"
-          name="email"
+          name=""
           id="user_email"
-          required
         />
 
         <input
@@ -194,5 +257,63 @@
         />
       </form>
     </div>
+    <div class="advertising"></div>
+    <div class="bottom">
+      <div class="bottom_area_1">
+        <span class="world_text_ad"
+          ><b
+            >Остались вопросы? <br />
+            Свяжитесь с нами:
+          </b>
+        </span>
+        <span class="world_text_ad"
+          >+38(068)3146927 <br />
+          artem.maksakov@hneu.net <br />
+          @Z_L_O_D_I_Y
+        </span>
+        <img
+          src="./images/inst.png"
+          class="bottom_area_image"
+          alt="inst"
+          width="100px"
+        />
+        <img
+          src="./images/twitter.png"
+          class="bottom_area_image"
+          alt="inst"
+          width="100px"
+        />
+        <img
+          src="./images/youtube.png"
+          class="bottom_area_image"
+          alt="inst"
+          width="100px"
+        />
+      </div>
+      <div class="bottom_area_2">
+        <span class="world_text_ad"><b>Наши партнеры: </b> </span>
+        <div class="bottom_area_grid">
+          <div class="bottom_area_grid_el">
+            <img src="./images/pepsi.png" alt="" width="115px" />
+          </div>
+          <div class="bottom_area_grid_el">
+            <img src="./images/green.png" alt="" width="95px" />
+          </div>
+          <div class="bottom_area_grid_el">
+            <img src="./images/velo.png" alt="" width="115px" />
+          </div>
+          <div class="bottom_area_grid_el">
+            <img src="./images/halal.png" alt="" width="115px" />
+          </div>
+          <div class="bottom_area_grid_el">
+            <img src="./images/workday.png" alt="" width="115px" />
+          </div>
+          <div class="bottom_area_grid_el">
+            <img src="./images/orange.png" alt="" width="100px" />
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="bottom_2"></div>
   </body>
 </html>
